# CAE_Grupo3

./: .env  CHANGELOG.md  README.md  back.py  config.py  db.py  pyproject.toml  requerimientos.txt  requirements.txt  setup.py
.github/workflows/: release-please.yml
ControlDeAccesoDeEmpleados/: Login.html  back.py  setup.py
ControlDeAccesoDeEmpleados/.github/workflows/: ci.yml  release-please.yml
ControlDeAccesoDeEmpleados/Backend/: back.py
ControlDeAccesoDeEmpleados/Frontend/: Inicio.html  Login.html  LoginStyle.css  Registro.html
ControlDeAccesoDeEmpleados/static/: LoginScript.js  style.css
Frontend/: Inicio.html  InicioAdministrador.html  Login.html  Registro.html  asignar_empleados.html  inicio_administrador.html  inicio_empleado.html  inicio_supervisor.html
app/: __init__.py  auth.py  back.py  routes.py  services.py
app/routes/: admin_routes.py  auth_routes.py  empleado_routes.py  supervisor_routes.py
app/static/css/: panel_admin.css  panel_empleado.css  (+2 more)
app/templates/: asignar_empleados.html  asignar_horario.html  enviar_avisos.html  gestionar_asignaciones.html  gestionar_horarios.html  login.html  mi_qr.html  mis_empleados.html  panel_admin.html  panel_empleado.html  panel_supervisor.html  registro_entrada.html  registro_salida.html  reporte_retrasos.html  revisar_tiempo_extra.html  solicitar_tiempo_extra.html  ver_avisos_admin.html  ver_mis_solicitudes_extra.html
app/utils/: helpers.py
static/: admin_style.css  inicio_style.css  style.css
tests/: conftest.py
tests/integration/: test_routes.py
tests/unit/: test_auth.py
