[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "control-de-acceso"
version = "2.4.2"
description = "Sistema de control de acceso de empleados en Flask"
authors = [
    {name = "Grupo3", email = "Grupo3@gmail.com"}
]
license = {text = "MIT"}
dependencies = [
    "flask"
]